fix-alignment

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ a{
 
 #container{
     /* width: 50%; */
-    width : 60%;
+    width : 80%;
     margin: 0% 40%;
 }
 
@@ -70,7 +70,7 @@ span{
 }
 
 #container-quiz{
-    width : 60%;
+    width : 80%;
     margin: 0% 30%;
 }
 
